# csa-lab-4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
Isa/: isa.py
Machine/: cache.py  controlunit.py  datapath.py  machine.py  memory.py
Translator/: assembler.py  codegen.py  preprocessor.py  translator.py  utils.py
docs/: desktop.ini  shema.drawio
examples/: cache_demo.asm  cat.asm  echo_upper.asm  factorial.asm  hello.asm  hello_user_name.asm  math64.asm  prob2.asm  sort.asm
golden/: cache_demo.yml  cat.yml  echo_upper.yml  factorial.yml  hello.yml  hello_user_name.yml  math64.yml  prob2.yml  sort.yml
tests/: test_golden.py
