[project]
name = "csa-lab-4"
version = "0.1.0"
requires-python = ">=3.12"  
dependencies = [
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-golden>=0.2.2",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pyyaml>=6.0.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
